--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hot-loader/react-dom": "^16.8.6",
     "react": "^16.8.6",
+    "react-app-rewire-aliases": "0.2.0",
     "react-app-rewire-hot-loader": "^2.0.1",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
     "react-hot-loader": "^4.11.1",
     "react-scripts": "3.0.1",
-    "@hot-loader/react-dom": "^16.8.6",
-    "react-app-rewire-aliases": "0.2.0"
+    "react-speech-recognition": "2.0.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -22,7 +23,11 @@
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
