--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "private": true,
   "dependencies": {
     "@hot-loader/react-dom": "^16.8.6",
+    "@tinymce/tinymce-react": "3.2.0",
+    "debounce": "1.2.0",
     "react": "^16.8.6",
     "react-app-rewire-aliases": "0.2.0",
     "react-app-rewire-hot-loader": "^2.0.1",
