--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hot-loader/react-dom": "^16.8.6",
+    "@hot-loader/react-dom": "16.9.0",
     "debounce": "1.2.0",
-    "react": "^16.8.6",
+    "react": "16.9.0",
     "react-app-rewire-aliases": "0.2.0",
-    "react-app-rewire-hot-loader": "^2.0.1",
+    "react-app-rewire-hot-loader": "2.0.1",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
-    "react-hot-loader": "^4.11.1",
-    "react-scripts": "3.0.1",
-    "react-speech-recognition": "2.0.1"
+    "react-hot-loader": "4.12.12",
+    "react-scripts": "3.1.1",
+    "react-speech-recognition": "2.0.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -23,12 +23,9 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+
   "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
+    "production": [">0.2%", "not dead", "not op_mini all"],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
