--- a/package.json
+++ b/package.json
@@ -6,24 +6,26 @@
     "debounce": "1.2.0",
     "react": "16.9.0",
     "react-app-rewire-aliases": "0.2.0",
-    "react-app-rewire-hot-loader": "2.0.1",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.8.6",
-    "react-hot-loader": "4.12.12",
     "react-scripts": "3.1.1",
     "react-speech-recognition": "2.0.4"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test --env=jsdom",
-    "eject": "react-app-rewired eject"
+       "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "browserslist": {
-    "production": [">0.2%", "not dead", "not op_mini all"],
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
     "development": [
       "last 1 chrome version",
       "last 1 firefox version",
